--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.7.0",
     "mongoose": "^5.12.13",
+    "morgan": "^1.10.0",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
